--- a/src/App.less
+++ b/src/App.less
@@ -3,11 +3,19 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+html,
+body,
+#root {
+  height: 100%;
+}
+
 .welcome {
   font-size: 30px;
   margin-top: 200px;
   text-align: center;
 }
+
 .search-form {
   background-color: var(--dark-bg-color);
   padding: 20px;
@@ -19,6 +27,7 @@
   background-color: var(--dark-bg-color);
   border-radius: 5px;
   color: #000;
+
   .header-wrapper {
     display: flex;
     justify-content: space-between;
@@ -26,13 +35,14 @@
     border-radius: 5px 5px 0 0;
     color: var(--dark-color);
     padding: 15px;
+
     .action button {
       margin-left: 15px;
     }
   }
 }
 
-.search-form + .base-table {
+.search-form+.base-table {
   margin-top: 20px;
 }
 
